# CLAIRE-RAG-Docker

./: .dockerignore  .gitignore  CLAIRE-RAG-Docker-Implementation.md  Dockerfile  LICENSE  README.md  VERSION  ask  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
claire_rag/: __init__.py  ask.py  index.py  server.py
claire_rag/corpus/: __init__.py  build.py  chunking.py  models.py
claire_rag/datasets/: __init__.py  attack.py  capec.py  cve.py  cwe.py  dcwf.py  nice.py
claire_rag/embeddings/: __init__.py  service.py
claire_rag/llm/: __init__.py  client.py  prompts.py  service.py
claire_rag/ranking/: __init__.py  service.py
claire_rag/retrieval/: __init__.py  service.py
claire_rag/vector_store/: __init__.py  store.py
config/: models.yaml  settings.yaml
scripts/: fetch-vectorstore.sh
